Upgrade to Java 17
Migrated from Java 11 to Java 17 using Moderne CLI with the OpenRewrite recipe org.openrewrite.java.migrate.UpgradeToJava17.

Changes:
- Update Java version from 11 to 17 in pom.xml
- Upgrade Lombok to 1.18.42 for Java 17 compatibility
- Apply pattern matching for instanceof in exception handling
- Replace String.format() with String.formatted()

Co-authored-by: Ona <no-reply@ona.com>